--- a/.gitmodules
+++ b/.gitmodules
@@ -12,13 +12,13 @@
 	branch = master
 [submodule "_quotes"]
 	path = _quotes
-	url = https://github.com/pibook/_quotes.git
+	url = https://github.com/antonop76/_quotes.git
 	branch = master
 [submodule "_notes"]
 	path = _notes
-	url = https://github.com/pibook/notes.git
+	url = https://github.com/antonop76/notes.git
 	branch = master
 [submodule "_bibliography"]
 	path = _bibliography
-	url = https://github.com/pibook/bibliography.git
+	url = https://github.com/antonop76/bibliography.git
 	branch = master
